--- a/src/public/css/user.css
+++ b/src/public/css/user.css
@@ -15,7 +15,7 @@ header {
     display: flex;
     align-items: center;
     background-color: transparent;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5); 
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
     border-bottom: 5px solid #ffc105;
 }
 
@@ -36,29 +36,66 @@ header {
     font-size: 25px;
 }
 
-.contenedor {
-    padding: 20px;
+.contenedor-principal {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 70vh;
+    justify-content: space-between;
+    align-items: flex-start;
+    margin: 20px auto;
+    padding: 20px;
+    background-color: #272626!important;
+    border-radius: 10px;
+    width: 80%;
 }
+
 
 .profile-box {
-    background-color: #333;
-    border: 1px solid #ffc105;
-    padding: 20px;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    width: 100%;
-    max-width: 400px;
-    text-align: left;
-    color: white;
+    flex: 1;
+    text-align: center;
 }
 
-.profile-box p {
-    margin: 10px 0;
-    font-size: 16px;
+.profile-img {
+    width: 120px;
+    height: 120px;
+    border-radius: 50%;
+    object-fit: cover;
+    margin-bottom: 10px; 
+}
+
+.info-grid {
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 10px;
+}
+
+.info-item {
+    background-color: #444;
+    padding: 10px;
+    border-radius: 8px;
+    width: 30%;
+    color: white;
+    font-size: 30px;
+    font-weight: 700;
+}
+
+.extra-content {
+    flex: 0.5;
+    text-align: center;
+    margin-left: 20px;
+    margin-top: 7%;
+}
+
+.extra-img {
+    width: 100px;
+    height: 100px;
+    margin-bottom: 10px;
+}
+
+.inspirational-quote {
+    font-size: 20px;
+    font-style: italic;
+    color: #ffc105;
+    margin-top: 40px;
+    font-weight: 700;
 }
 
 .logout-btn {
@@ -75,4 +112,9 @@ header {
 
 .logout-btn:hover {
     background-color: #d32f2f;
+}
+
+strong {
+    font-size: 18px!important;
+    font-weight: 500!important;
 }
