--- a/src/views/Perfil.ejs
+++ b/src/views/Perfil.ejs
@@ -7,12 +7,11 @@
     <meta charset="UTF-8">
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="EmergencyApp">
-    <meta name="keywords" content="EmergencyApp, Gimnasio, Entrenadores, Ayuda">
+    <meta name="description" content="Universidad Fronteriza de Ciudad Juárez, 16 días de activismo contra la violencia de género..."/>
+    <meta name="keywords" content="Fronteriza, Universidad, Activismo"/>
     <meta name="robots" content="index"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/EstiloFooter.css">
-    <link rel="stylesheet" href="/css/login.css">
     <link rel="stylesheet" href="/css/user.css">
 </head>
 <body>
@@ -26,14 +25,26 @@
         <button class="logout-btn" onclick="logout()">Cerrar sesión</button>
     </header>
 
-    <div class="contenedor">
+    <div class="contenedor-principal">
         <div class="profile-box">
-            <center>
-                <p><strong>Nombre:</strong> <%= typeof nombre !== 'undefined' ? nombre : '' %></p>
-                <p><strong>Edad:</strong> <%= typeof grupo !== 'undefined' ? grupo : '' %></p>
-                <p><strong>Peso:</strong> <%= typeof tutor !== 'undefined' ? tutor : '' %></p>
-                <p><strong>Estatura:</strong> <%= typeof carrera !== 'undefined' ? carrera : '' %></p>
-            </center>
+            <img src="/images/user.png" alt="Foto de Perfil" class="profile-img">
+            <h2> Karen Adriana Morales Andrade </h2>
+            <div class="info-grid">
+                <div class="info-item">
+                    <p><strong>Edad:</strong> <br> 21 </p>
+                </div>
+                <div class="info-item">
+                    <p><strong>Peso:</strong> <br> 50 </p>
+                </div>
+                <div class="info-item">
+                    <p><strong>Estatura:</strong> <br> 1.60 </p>
+                </div>
+            </div>
+        </div>
+
+        <div class="extra-content">
+            <!--img src="/images/muscle.png" alt="Motivación" class="extra-img"-->
+            <p class="inspirational-quote">"Un entrenamiento seguro, sólo lo encontrarás en nuestra sucursal."</p>
         </div>
     </div>
 
@@ -42,7 +53,6 @@
         </div>
     </footer>
     <script src="/js/Footer.js"></script>
-
     <script>
         function logout() {
             fetch('/logout', { method: 'POST', credentials: 'include' })
